--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
   },
   "author": "",
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.9",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.10",
     "app-module-path": "^2.2.0",
+    "body-parser": "^1.19.0",
     "colors": "^1.4.0",
+    "command-line-args": "^5.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "socket.io": "^2.4.1",
     "source-map-support": "^0.5.19"
   },
   "keywords": [
