--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "colors": "^1.4.0",
     "command-line-args": "^5.1.1",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "socket.io": "^2.4.1",
