--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "devDependencies": {
     "@types/mocha": "^8.2.0",
+    "@types/socket.io": "^2.1.13",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "typescript": "^4.1.3"
